Add images to the recipe.
